--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "fs-extra": "^10.1.0",
     "http": "^0.0.1-security",
     "path": "^0.12.7",
-    "url": "^0.11.0"
+    "url": "^0.11.0",
+    "nodemon": "^2.0.15"
   }
 }
